fix: contrast for other figure captions

--- a/src/app.css
+++ b/src/app.css
@@ -153,6 +153,6 @@ html:has(input.theme-controller[value='light']:not(:checked)) .shiki span {
   @apply content-[''] border-b border-base-content/30 bottom-0 absolute inset-3;
 }
 
-.chat-bubble figcaption {
+.prose figcaption {
   @apply text-base-content/80;
 }
